[gd_scene load_steps=7 format=3 uid="uid://c2w0w1x0y0q1s"]

[ext_resource type="Script" path="res://scripts/enemies/base_enemy.gd" id="1_abcde"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="2_fghij"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.5
height = 2.0

[sub_resource type="SphereShape3D" id="SphereShape3D_2"]
radius = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_3"]
size = Vector3(1, 2, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4"]

[node name="BaseEnemy" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_abcde")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_fghij")

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("SphereShape3D_2")

[node name="Hurtbox" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_3")

[node name="CharacterModel" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterModel"]
